# sage-benchmark

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_TO_INDEPENDENT_REPO.md  PLANNED_MIGRATION.md  README.md  __init__.py  __main__.py  _version.py  changelogs.md  conftest.py  pyproject.toml  quickstart.sh  sage-benchmark.code-workspace
.github/: copilot-instructions.md
.github/agents/: sage-benchmark.agent.md
.github/workflows/: benchmark-ci.yml  ci-benchmarks.yml  nightly-benchmark.yml  paired-backend-run.yml  quality.yml  upload-to-hf.yml
artifacts/paired_backend_runs/run_id=laptop-default-20260221/config_hash=16e642c8dad9/backends/sage/: unified_results.jsonl
artifacts/paired_backend_runs/run_id=laptop-fifo-20260221/config_hash=ee27ecc0aa8a/backends/sage/: unified_results.jsonl
config/: __init__.py  config_loader.py  exp_5_1.yaml  exp_5_2.yaml  exp_5_3.yaml  q1.yaml  q2.yaml  q3.yaml  q4.yaml  q5.yaml  q6.yaml  q7.yaml  q8.yaml
docs/: 01_abstract.md  02_introduction.md  03_related_work.md  04_system_and_method.md  05_experiments.md  06_contributions_example.md  07_system_outline_example.md  08_paper_outline_example.md  BACKEND_COMPARISON_GUIDE.md  WORKLOAD_DESIGNS.md  all_prompts_combined.md  backend-abstraction.md  compare_backends.md  paper_prompts_README.md
experiments/: README.md  __init__.py  base_experiment.py  config.py  exp_5_1_e2e_pipeline.py  exp_5_2_control_plane.py  exp_5_3_isolation.py  exp_5_4_scalability.py  exp_5_5_heterogeneity.py  plotting.py  q1_pipelinechain.py  q2_controlmix.py  q3_noisyneighbor.py  q4_scalefrontier.py  q5_heteroresilience.py  q6_bursttown.py  q7_reconfigdrill.py  q8_recoverysoak.py  run_all.sh  scheduler_comparison.py  test_workload2_local.py
experiments/analysis/: __init__.py  compare_backends.py  run_paired_backends.py
experiments/backends/: __init__.py  base.py  ray_runner.py  sage_runner.py
experiments/common/: REFACTOR_PROMPT.md  RERANKER_SERVICE_GUIDE.md  __init__.py  cli_args.py  component_versions.py  execution_guard.py  inference.py  metrics_schema.py  models.py  operators.py  pipeline.py  reproducibility.py  request_utils.py  result_writer.py  system_profile.py  verify_cpu_intensive.py  visualization.py
experiments/distributed_workloads/: README.md  __init__.py  analyze_workload4_metrics.py  run_scale_experiments.sh  run_workload4.py  test_run_workload4.sh  test_workload4_minimal.py  test_workload4_simple.py  visualize_workload4.py  workload4_config_debug.yaml  workload4_config_example.yaml
experiments/distributed_workloads/workload4/: QUICK_START.md  README.md  __init__.py  aggregation.py  batching.py  clustering.py  config.py  config_examples.py  example_pipeline_quickstart.py  example_reranking.py  examples.py  examples_generation.py  examples_graph_memory.py  examples_semantic_join.py  examples_sources.py  generation.py  graph_memory.py  mappers.py  models.py  pipeline.py  reranking.py  semantic_join.py  services.py  sources.py  tag_utils.py  union_operator.py  vdb_retrieval.py  workload4_config.yaml
experiments/distributed_workloads/workload4/examples/: batch_demo.py  vdb_retrieval_example.py
experiments/distributed_workloads/workload4/tests/: __init__.py  test_batching.py  test_clustering.py  test_generation.py  test_graph_memory.py  test_models_config.py  test_pipeline.py  test_reranking.py  test_semantic_join.py  test_sources.py  test_vdb_retrieval.py
experiments/exp1_single_vs_multi/: run_experiment.py
experiments/exp2_high_load_parallel/: run_experiment.py
experiments/exp3_latency_throughput/: run_experiment.py
experiments/exp4_parallel_jobs/: README.md  __init__.py  run_experiment.py
experiments/pipelines/: README.md  __init__.py  pipeline_a_rag.py  pipeline_b_refiner.py  pipeline_c_vector_join.py  pipeline_d_batch.py  pipeline_e_scheduling.py  pipeline_f_operators_demo.py  scheduler.py
experiments/pipelines/adaptive_rag/: README.md  __init__.py  branch_pipeline.py  classifier.py  example.py  functions.py  modular_pipeline.py  pipeline.py  sage_dataflow_pipeline.py  test_branch_pipeline.py
experiments/tool_use_agent/: DESIGN.md  __init__.py  agent_tools.py  models.py  operators.py  pipeline.py
hf_data/: benchmark_results.json
hooks/: pre-commit  pre-push
latex/: 01_abstract.tex  02_introduction.tex  03_related_work.tex  04.5_design.tex  04_overview.tex  05_experiments.tex  06_conclusion.tex  ABSTRACT_WRITING_PROMPT.md  EXPERIMENT_WRITING_PROMPT.md  EXPERIMENT_WRITING_PROMPT_V2.md  INTRODUCTION_WRITING_PROMPT.md  PROMPT_REWRITE_5.2.md  REFACTOR_PROMPT.md  REFACTOR_REPORT.md  appendix_design.tex  degisn_old.tex  generate_figures.py  validate_data.py
sage_benchmark/: __init__.py  _version.py  oneclick.py
scripts/: aggregate_for_hf.py  embedding_server.py  merge_and_upload.py  sage-system-bench  sage_bench_cli.py  upload_to_hf.py
tests/: conftest.py  test_backend_selector.py  test_basic.py  test_cli_args.py  test_compare_backends.py  test_legacy_terms.py  test_metrics_schema.py  test_reproducibility.py  test_run_paired_backends.py  test_workload_standalone_entrypoints.py
