[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "isage-benchmark"
version = "0.1.1.1"
description = "SAGE Benchmark - RAG and experimental benchmarks for SAGE framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" },
]
keywords = [
    "sage",
    "benchmark",
    "rag",
    "retrieval-augmented-generation",
    "evaluation",
    "experiments",
    "intellistream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core dependencies - external + SAGE packages from PyPI
dependencies = [
    # SAGE dependencies from PyPI
    # Version compatibility: middleware 0.2.3 and libs 0.2.0.6 both require transformers>=4.52.0,<4.54.0
    "isage-common>=0.2.3",
    "isage-platform>=0.2.3",  # Provides sage.platform.runtime required by experiment runners
    "isage-kernel>=0.2.3",
    "isage-middleware>=0.2.3",  # Must be >=0.2.3 for transformers compatibility with libs
    "isage-libs>=0.2.0.6",

    # Note: sage.data is included as a submodule in src/sage/data
    # and will be installed as part of this package

    # ML dependencies (sentence-transformers compatible with transformers 4.38+)
    "sentence-transformers>=3.1.0,<4.0.0",

    # RAG and benchmark dependencies
    "pyyaml>=6.0",
    "chromadb>=1.0.20",
    "pymilvus[model]>=2.4.0",
    "faiss-cpu>=1.7.0,<2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0,<2.3.0",

    # Visualization dependencies (required by benchmark_refiner, benchmark_control_plane)
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff==0.14.6",  # Pinned to match tools/pre-commit-config.yaml
]

[project.urls]
Homepage = "https://github.com/intellistream/SAGE"
Documentation = "https://intellistream.github.io/SAGE"
Repository = "https://github.com/intellistream/SAGE"
Issues = "https://github.com/intellistream/SAGE/issues"

[project.scripts]
# Control Plane Benchmark CLI
sage-cp-bench = "sage.benchmark.benchmark_control_plane.cli:main"
# Refiner Benchmark CLI
sage-refiner-bench = "sage.benchmark.benchmark_refiner.cli:main"

[tool.setuptools]
# Flat-layout repository: install top-level Python packages directly
packages = ["config", "experiments", "sage_benchmark"]

[tool.setuptools.package-data]
"sage.benchmark.benchmark_rag" = [
    "config/*.yaml",
    "data/**/*",
    "evaluation/config/*.yaml",
]

# ============================================================================
# Code Quality Configuration
# Extends from root ruff.toml for unified standards across all packages
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "F401",   # Unused imports (handled by isort/pre-commit)
    "F403",   # Star imports (legacy code)
    "F405",   # Undefined from star imports (legacy code)
    "F841",   # Unused local variable (may be intentional)
    "E712",   # Comparison to True/False (may be intentional for clarity)
    "E402",   # Module level import not at top (may be necessary)
    "E741",   # Ambiguous variable names (legacy code)
    "E722",   # Bare except (legacy code, needs careful refactoring)
    "W293",   # Blank line with whitespace (handled by trailing-whitespace hook)
]

# Exclude submodules and external code
[tool.ruff.lint.per-file-ignores]
"src/sage/benchmark/benchmark_amm/**" = ["F", "E", "W"]  # LibAMM submodule
"src/sage/benchmark/benchmark_anns/**" = ["F", "E", "W"]  # SAGE-DB-Bench submodule
"src/sage/data/**" = ["F", "E", "W"]  # sageData submodule

[tool.mypy]
cache_dir = "../../.sage/cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "--benchmark-storage=../../.sage/benchmarks",
    "-o",
    "cache_dir=../../.sage/cache/pytest",
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
    "rag: marks tests as RAG benchmark tests",
]

[tool.coverage.run]
source = [
    "src/sage",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/_test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py310']
